--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-simplejson==3.16.0
 bottle==0.12.16
-psycopg2==2.7.6.1
+cffi==1.12.3
 gevent==1.4.0
+greenlet==0.4.15
+psycopg2==2.8.2
+pycparser==2.19
+simplejson==3.16.0
